--- a/AulaVarJS-2/AulaVarJS-2.html
+++ b/AulaVarJS-2/AulaVarJS-2.html
@@ -13,26 +13,26 @@
 <body>
     <div class="login-box">
 
-        <h2>Testes JavaScript-2</h2>
+        <h2>Buscar CEP</h2>
         <form>
             <div class="user-box" id>
-                <input type="text" onblur="pesquisacep(this.value);" required="" id="campo2">
+                <input type="text" maxlength="8" onblur="pesquisacep(this.value);" required="" id="campo2">
                 <label>Cep</label>
             </div>
             <div class="user-box" id>
-                <input type="text" name="" required="" id="campo2">
+                <input type="text" name="" required="" id="rua">
                 <label>Rua</label>
             </div>
             <div class="user-box" id>
-                <input type="text" name="" required="" id="campo2">
+                <input type="text" name="" required="" id="bairro">
                 <label>Bairro</label>
             </div>
             <div class="user-box" id>
-                <input type="text" name="" required="" id="campo2">
+                <input type="text" name="" required="" id="cidade">
                 <label>Cidade</label>
             </div>
             <div class="user-box" id>
-                <input type="text" name="" required="" id="campo2">
+                <input type="text" name="" required="" id="estado">
                 <label>Estado</label>
             </div>
 
