--- a/AulaVarJS-4/AulaVarJS-4.html
+++ b/AulaVarJS-4/AulaVarJS-4.html
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="AulaVarJS-4.css">
-    <script src="AulaVarJS-4.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog da Var</title>
 </head>
-
 <body>
-    <div class="login-box">
 
-        <h2>Post test</h2>
-        <form>
-            <div class="user-box">
-                <input type="text" name="" id="">
-                <label></label>
-            </div>
-
-            <p id="loading">Carregando...</p>
-            <input id="btn-buscar" type="button" value="BuscarPosts" >
-            <div id="post-container"></div>
-
-        </form>
-    </div>
-
+  <h1>Posts do Blog da Var</h1>
+  <p id="loading">Carregando...</p>
+  <input type="button" value="BuscarPosts" id="botaoBuscar">
+  <div id="post-container"> </div>
+  <script src="AulaVarJS-4.js"></script>
+  <a href="./post.html">teste</a>
 </body>
-
 </html>
-
-
